# wave3-magical-drones

./: .gitignore  Makefile  README.md  check_poetry_version.sh  cycle_GAN_train.ipynb  datacard.md  dataset.py  discriminator.py  lightning.yaml  main.py  pyproject.toml
.github/workflows/: workflow.yaml
CycleGAN/: config.py  cycle_GAN_train.ipynb  dataset.py  discriminator.py  generator.py  pyproject.toml  train.py  utils.py
CycleGAN/tests/ml_tests/: test_discriminator.py  test_generator.py  test_utils.py
conf/: data.yaml  models.yaml  trainer.yaml
cropped/: 66573_611615_7.160.18.25 (2).tif  66573_611615_7.160.18.25(3).tif
datagen/: README.md  step1.py  step2.py  step3.py  utils.py
datagen/styles/: buildings.qml  landduse kopia.qml  landuse.qml  railways.qml  roads.qml  water.qml
docs/: project_concept_details_summary.md
magical_drones/: sanity.py  trainer.py
magical_drones/CycleGAN/: config.py  dataset.py  discriminator.py  utils.py
magical_drones/config/: train_config.yaml
magical_drones/datasets/: magmap.py
magical_drones/models/: __init__.py
magical_drones/models/base_gan/: discriminator.py  gan.py  generator.py
magical_drones/models/cycle_gan/: discriminator.py  gan.py  generator.py
magical_drones/models/cycle_gan2/: discriminator.py  gan.py  generator.py
magical_drones/training/: trainer.py
original/: pobieracz_ortofoto_20241117131728.txt  pobieracz_ortofoto_20241117134012.txt  pobieracz_ortofoto_20241117134504.txt
scraper/: index.html  scraper.py  scraper2.py
tests/: datamodule_test.py
webapp/: .gitignore  pom.xml
(+34 files in other folders)
