[tool.poetry]
name = "magical-drones"
version = "0.2.0"
description = ""
authors = ["Czarna magia <czarnamagiaknsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
ruff = "^0.7.3"
torch = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
