[tool.poetry]
name = "magical-drones"
version = "0.4.2"
version = "0.4.2"
description = ""
authors = ["Czarna magia <czarnamagiaknsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
ruff = "^0.7.3"
torch = "2.2.2"
pytorch-lightning = "^2.5.0"
torchvision = "^0.17"
numpy = "<2"
datasets = "^3.2.0"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
